gloo-mesh/gm2.0-network/resources/gloo/vault-gloo-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vault-gloo-vs
  namespace: gloo-system
spec:   
  virtualHost:
    domains:
    - 'vault.gloo-mesh.istiodemos.io'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: vault-vault-8200
            namespace: gloo-system
